Rename ticker mapping endpoint (#17)
